--- a/covidentify-ios/Info.plist
+++ b/covidentify-ios/Info.plist
@@ -4,6 +4,11 @@
 <dict>
 	<key>NSHealthUpdateUsageDescription</key>
 	<string>access health data for better information</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSHealthShareUsageDescription</key>
 	<string>access health data for better information</string>
 	<key>UIApplicationSceneManifest</key>
